# baxter_faces

./: CMakeLists.txt  README.md  manifest.xml  package.xml  setup.py
scripts/: baxter_faces
src/baxter_faces/: FaceImage.py  __init__.py
